--- a/css/style.css
+++ b/css/style.css
@@ -163,6 +163,7 @@ footer {
 /* -----------------------------footer-------------------------- */
 
 .footer-logo {
+  font-family: Raleway;
   font-style: normal;
   font-weight: bold;
   font-size: 26px;
