--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,14 @@ footer {
   color: #2196f3;
 }
 
+.logo-web {
+  color: #2196F3;
+}
+
+.logo-studio {
+  color: #000000;
+}
+
 .header-link {
   font-style: normal;
   font-weight: 500;
