--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
+:root {
+  --first-color: #ffffff;
+  --logo-and-active-color: #2196f3;
+  --title-color: #212121;
+  --secondary-color: #757575;
+  --first-background-color: #2f303a;
+}
+
 body {
   font-family: "roboto", sans-serif;
   background-color: #e5e5e5;
@@ -12,7 +20,7 @@ body {
 }
 
 footer {
-  background-color: #2f303a;
+  background-color: var(--first-background-color);
 }
 
 /* --------------------------HEADER----------------------------- */
@@ -24,15 +32,15 @@ footer {
   font-size: 26px;
   line-height: 1.19;
   letter-spacing: 0.03em;
-  color: #2196f3;
+  color: var(--logo-and-active-color);
 }
 
 .logo-studio-b {
-  color: #212121;
+  color: var(--title-color);
 }
 
 .logo-studio-w {
-  color: #ffffff;
+  color: var(--first-color);
 }
 
 .header-link {
@@ -41,11 +49,11 @@ footer {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
-  color: #212121;
+  color: var(--title-color);
 }
 .header-link:hover,
 .header-link:focus {
-  color: #2196f3;
+  color: var(--logo-and-active-color);
 }
 
 .header-mail,
@@ -55,21 +63,21 @@ footer {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
-  color: #757575;
+  color: var(--secondary-color);
 }
 .header-mail:hover,
 .header-mail:focus {
-  color: #2196f3;
+  color: var(--logo-and-active-color);
 }
 
 .header-tel:hover,
 .header-tel:focus {
-  color: #2196f3;
+  color: var(--logo-and-active-color);
 }
 
 /*--------------------------HERO------------------------- */
 .hero {
-  background-color: #2f303a;
+  background-color: var(--first-background-color);
 }
 
 .hero-title {
@@ -80,11 +88,11 @@ footer {
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-  color: #ffffff;
+  color: var(--first-color);
 }
 
 .hero-btn {
-  background-color: #2196f3;
+  background-color: var(--logo-and-active-color);
 }
 
 .hero-btn {
@@ -98,7 +106,7 @@ footer {
   align-items: center;
   text-align: center;
   letter-spacing: 0.06em;
-  color: #ffffff;
+  color: var(--first-color);
 }
 
 .hero-btn:hover,
@@ -115,7 +123,7 @@ footer {
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: #212121;
+  color: var(--title-color);
 }
 
 .about-exemp-title {
@@ -124,7 +132,7 @@ footer {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
-  color: #757575;
+  color: var(--secondary-color);
 }
 
 /* ------------------------------BASIC---------------------------- */
@@ -136,7 +144,7 @@ footer {
   line-height: 1.17;
   text-align: center;
   letter-spacing: 0.03em;
-  color: #212121;
+  color: var(--title-color);
 }
 
 /* ---------------------------TEAM------------------------------ */
@@ -148,7 +156,7 @@ footer {
   line-height: 1.67;
   text-align: center;
   letter-spacing: 0.03em;
-  color: #212121;
+  color: var(--title-color);
 }
 
 .team-title-name {
@@ -158,7 +166,7 @@ footer {
   line-height: 1.19;
   text-align: center;
   letter-spacing: 0.03em;
-  color: #212121;
+  color: var(--title-color);
 }
 
 .item-profil {
@@ -168,7 +176,7 @@ footer {
   line-height: 1.19;
   text-align: center;
   letter-spacing: 0.03em;
-  color: #757575;
+  color: var(--secondary-color);
 }
 
 /* -----------------------------footer-------------------------- */
@@ -180,7 +188,7 @@ footer {
   font-size: 26px;
   line-height: 1.19;
   letter-spacing: 0.03em;
-  color: #2196f3;
+  color: var(--logo-and-active-color);
 }
 
 .footer-location {
@@ -189,7 +197,7 @@ footer {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
-  color: #ffffff;
+  color: var(--first-color);
 }
 
 .footer-mail,
@@ -207,21 +215,21 @@ footer {
   background-color: #f5f4fa;
 }
 
-.button {
+.btn {
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
   text-align: center;
   letter-spacing: 0.03em;
-  color: #212121;
+  color: var(--title-color);
 }
 
 .btn:hover,
 .btn:focus,
 .btn:active {
-  background-color: #2196f3;
-  color: #ffffff;
+  background-color: var(--logo-and-active-color);
+  color: var(--first-color);
 }
 
 .hero-title-portfolio {
@@ -230,7 +238,7 @@ footer {
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
-  color: #212121;
+  color: var(--title-color);
 }
 
 .hero-exemp-title {
@@ -239,5 +247,5 @@ footer {
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.03em;
-  color: #757575;
+  color: var(--secondary-color);
 }
